--- a/BlackWindowEngine/BlackWindowEngine/BlackWindowEngine.vcxproj.filters
+++ b/BlackWindowEngine/BlackWindowEngine/BlackWindowEngine.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="SerialClass.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Matrix.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
