--- a/BlackWindowEngine/BlackWindowEngine/BlackWindowEngine.vcxproj.filters
+++ b/BlackWindowEngine/BlackWindowEngine/BlackWindowEngine.vcxproj.filters
@@ -131,6 +131,9 @@
     <ClCompile Include="Serial.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Matrix.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
